# src/main/kotlin/ru/xyecos/domain/model.kt
@@ -1,6 +1,6 @@
 package ru.xyecos.domain
 
-data class Station(
+data class StationDataShort(
     val id: Int,
     val title: String,
     val isLoginStation: Boolean
@@ -14,47 +14,48 @@ data class StationData(
     val locomotives: List<Locomotive>,
     val wagons: List<Wagon>,
     val isVirtual: Boolean
-)
+) {
 
-data class StationInfo(
-    val id: Int,
-    val name: String
-)
+    data class StationInfo(
+        val id: Int,
+        val name: String
+    )
 
-data class Park(
-    val id: Int,
-    val name: String
-)
+    data class Park(
+        val id: Int,
+        val name: String
+    )
 
-data class Way(
-    val id: Int,
-    val name: String
-)
+    data class Way(
+        val id: Int,
+        val name: String
+    )
 
-data class Locomotive(
-    val id: Int,
-    val inventoryNumber: String,
-    val direction: String
-)
+    data class Locomotive(
+        val id: Int,
+        val inventoryNumber: String,
+        val direction: String
+    )
 
-data class Wagon(
-    val id: Int,
-    val inventoryNumber: String,
-    val position: Int,
-    val type: String,
-    val isSick: Boolean,
-    val cargo: String,
-    val operationState: String,
-    val idleDaysLength: Int,
-    val owner: String,
-    val isWithHatch: Boolean,
-    val loadCapacity: Double,
-    val daysToRepair: Int,
-    val kilometersLeft: Int,
-    val isDirty: Boolean,
-    val note1: String,
-    val note2: String
-)
+    data class Wagon(
+        val id: Int,
+        val inventoryNumber: String,
+        val position: Int,
+        val type: String,
+        val isSick: Boolean,
+        val cargo: String,
+        val operationState: String,
+        val idleDaysLength: Int,
+        val owner: String,
+        val isWithHatch: Boolean,
+        val loadCapacity: Double,
+        val daysToRepair: Int,
+        val kilometersLeft: Int,
+        val isDirty: Boolean,
+        val note1: String,
+        val note2: String
+    )
+}
 
 data class WagonTypeList(val wagonTypes: List<String>)
 
@@ -85,14 +86,14 @@ data class OperationsList(
     val operationTypeId: Int,
     val reasonId: Int,
     val wagonsIds: List<Int>,
-    val departureStation: StationInfo,
+    val departureStation: StationData.StationInfo,
     val departurePark: Park,
     val departureWay: Way,
-    val destinationStation: StationInfo,
+    val destinationStation: StationData.StationInfo,
     val destinationPark: Park,
     val destinationWay: Way,
     val supplyDirection: String,
-    val locomotivesList: List<Locomotive>,
+    val locomotivesList: List<StationData.Locomotive>,
     val operationStatus: String,
     val comment: String
 )
