# src/main/kotlin/ru/xyecos/domain/responses/form/FormCreated.kt
@@ -1,5 +1,6 @@
 package ru.xyecos.domain.responses.form
 
 data class FormCreated(
-    val formId: Int
+    val formId: Int,
+    val timestamp: Long
 )
