# src/main/kotlin/ru/xyecos/domain/responses/form/ShadowMergeResults.kt
@@ -1,0 +1,9 @@
+package ru.xyecos.domain.responses.form
+
+import ru.xyecos.domain.Wagon
+import ru.xyecos.domain.Way
+
+data class ShadowMergeResults(
+    val ways: List<Way>,
+    val wagons: List<Wagon>
+)
